--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>React Bootstrap Todo List</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="styles/bootstrap/bootstrap.css">
 </head>
 <body>
   <div id="app"></div>
